# permit-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
examples/food-ordering-system/: .env.example  README.md  client.py  food_ordering_mcp.py  permit_client.py  permit_mcp.py  pyproject.toml  server.py  utils.py
src/permit_mcp/: server.py
