[project]
name = "food-ordering-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.46.0",
    "httpx>=0.28.1",
    "mcp>=1.2.1",
    "permit>=2.7.2",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]
